--- a/showcase/modules/web-showcase/pom.xml
+++ b/showcase/modules/web-showcase/pom.xml
@@ -1,6 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+   <modelVersion>4.0.0</modelVersion>
 
    <parent>
       <groupId>com.invessence</groupId>
@@ -9,41 +11,136 @@
       <relativePath>../parent/pom.xml</relativePath>
    </parent>
 
-   <artifactId>web-showcase</artifactId>
+   <artifactId>showcase-web</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+   <build>
+      <defaultGoal>install</defaultGoal>
+      <plugins>
+         <!-- Enabling and configuring regular resources filtering.
+           See also section "resources" below -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>2.3</version>
+            <configuration>
+               <!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
+               <encoding>UTF-8</encoding>
+            </configuration>
+         </plugin>
+         <!-- Enabling and configuring web resources filtering -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.1.1</version>
+            <configuration>
+               <webResources>
+                  <resource>
+                     <filtering>true</filtering>
+                     <directory>src/main/webapp</directory>
+                     <includes>
+                        <include>**/*.html</include>
+                        <include>**/*.xhtml</include>
+                        <include>**/*.xml</include>
+                        <!-- include any other file types you want to filter -->
+                     </includes>
+                  </resource>
+               </webResources>
+            </configuration>
+         </plugin>
+      </plugins>
+      <resources>
+         <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+         </resource>
+      </resources>
+   </build>
 
-    <dependencies>
-        <dependency>
+   <dependencies>
+      <dependency>
+         <groupId>com.invessence</groupId>
+         <artifactId>core</artifactId>
+         <version>${invessence.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.invessence</groupId>
+         <artifactId>emailer</artifactId>
+         <version>${invessence.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.invessence</groupId>
+         <artifactId>invmodel</artifactId>
+         <version>${invessence.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>webcab</groupId>
+          <artifactId>portfolioJ2SE</artifactId>
+       </dependency>
+		<dependency>
 			<groupId>com.invessence</groupId>
 			<artifactId>yodlee-services</artifactId>
             <version>1.0-SNAPSHOT</version>
 		</dependency>
 
       <dependency>
-         <groupId>commons-logging</groupId>
-         <artifactId>commons-logging</artifactId>
-      </dependency>
-       <dependency>
-          <groupId>commons-pool</groupId>
-          <artifactId>commons-pool</artifactId>
-       </dependency>
-
-      <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
+         <groupId>commons-beanutils</groupId>
+         <artifactId>commons-beanutils</artifactId>
       </dependency>
       <dependency>
          <groupId>commons-dbcp</groupId>
          <artifactId>commons-dbcp</artifactId>
       </dependency>
-
-
-<dependency>
+      <dependency>
+         <groupId>commons-digester</groupId>
+         <artifactId>commons-digester</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>commons-fileupload</groupId>
+         <artifactId>commons-fileupload</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.commons</groupId>
+         <artifactId>commons-lang3</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>commons-logging</groupId>
+         <artifactId>commons-logging</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>commons-pool</groupId>
+         <artifactId>commons-pool</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.google.collections</groupId>
+         <artifactId>google-collections</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jdom</groupId>
+         <artifactId>jdom</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>javax.ws.rs</groupId>
+         <artifactId>javax.ws.rs-api</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>log4j</groupId>
+         <artifactId>log4j</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>mysql</groupId>
+         <artifactId>mysql-connector-java</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.quartz-scheduler</groupId>
+         <artifactId>quartz</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.google.code.maven-play-plugin.org.playframework</groupId>
+         <artifactId>jj-simplecaptcha</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-aop</artifactId>
       </dependency>
@@ -159,8 +256,46 @@
          <groupId>org.springframework.security</groupId>
          <artifactId>spring-security-web</artifactId>
       </dependency>
-
+      <dependency>
+         <groupId>javax.mail</groupId>
+         <artifactId>mail</artifactId>
+      </dependency>
+       <dependency>
+           <groupId>avalon-framework</groupId>
+           <artifactId>avalon-framework</artifactId>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.avalon.logkit</groupId>
+           <artifactId>avalon-logkit</artifactId>
+       </dependency>
+       <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+          </dependency>
+         <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
         <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
+
+      <!-- New spark interface -->
+      <dependency>
+            <groupId>themes</groupId>
+            <artifactId>spark</artifactId>
+            <version>1.0</version>
+         </dependency>
+
+      <!-- Primefaces dependecies -->
+      <dependency>
+          <groupId>themes</groupId>
+          <artifactId>spark</artifactId>
+            <version>1.0</version>
+       </dependency>
+
+      <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>5.2.RC3</version>
@@ -170,75 +305,68 @@
            <artifactId>primefaces-extensions</artifactId>
            <version>1.2.1</version>
          </dependency>
-        <dependency>
+         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.faces</artifactId>
-            <version>2.2.8</version>
-        </dependency>
-        <dependency>
+            <version>2.2.6</version>
+         </dependency>
+         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+         </dependency>
+         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
+         </dependency>
+         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
-    </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.1.9.v20130131</version>
-                <configuration>
-                    <webAppConfig>
-                        <contextPath>/spark</contextPath>
-                    </webAppConfig>
-                    <scanIntervalSeconds>5</scanIntervalSeconds>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>8081</port>
-                        </connector>
-                    </connectors>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <webResources>
-                        <resource>
-                            <directory>${build.sourceDirectory}</directory>
-                            <targetPath>sources</targetPath>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+      <!-- Other Primefaces extensions dependencies -->
+      <!-- OCPSoft Preetyfaces -->
+      <dependency>
+            <groupId>org.ocpsoft.rewrite</groupId>
+            <artifactId>rewrite-servlet</artifactId>
+            <version>2.0.12.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.ocpsoft.rewrite</groupId>
+          <artifactId>rewrite-config-prettyfaces</artifactId>
+          <version>2.0.12.Final</version>
+      </dependency>
 
-    <repositories>
-        <repository>
-            <id>prime-repo</id>
-            <name>PrimeFaces Maven Repository</name>
-            <url>http://repository.primefaces.org</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
+      <!-- itext and other for exporting documents in pdf/excel format -->
 
+      <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.1.3</version>
+         </dependency>
+         <dependency>
+             <groupId>com.lowagie</groupId>
+             <artifactId>itext</artifactId>
+             <version>2.1.7</version>
+             <exclusions>
+                 <exclusion>
+                     <groupId>bouncycastle</groupId>
+                     <artifactId>bcprov-jdk14</artifactId>
+                 </exclusion>
+                 <exclusion>
+                     <groupId>bouncycastle</groupId>
+                     <artifactId>bcmail-jdk14</artifactId>
+                 </exclusion>
+                 <exclusion>
+                     <groupId>org.bouncycastle</groupId>
+                     <artifactId>bctsp-jdk14</artifactId>
+                 </exclusion>
+             </exclusions>
+         </dependency>
+
+   </dependencies>
 </project>
