--- a/ltam/modules/parent/pom.xml
+++ b/ltam/modules/parent/pom.xml
@@ -847,25 +847,25 @@
             <apache.url>http://localhost:8080</apache.url>
             <tomcat.url>http://localhost:8080</tomcat.url>
             <ssl.url>http://localhost:8080</ssl.url>
-            <mail.host>smtp.gmail.com</mail.host>
-            <mail.username>no-reply@invessence.com</mail.username>
+            <mail.host>smtp.mailgun.org</mail.host>
+            <mail.username>noreply@symbil.com</mail.username>
             <mail.password>G3n3r@l89</mail.password>
             <mail.port>587</mail.port>
             <base.data.dir>C:\LTAM\data</base.data.dir>
-            <base.rbsa.dir>C:\LTAM\RBSA</base.rbsa.dir>
+            <base.rbsa.dir>C:LTAM\RBSA</base.rbsa.dir>
             <base.clientdata.dir>C:\LTAM\client</base.clientdata.dir>
             <base.advisor.dir>C:\LTAM\advisor</base.advisor.dir>
-            <base.web.dir>C:\workspace\web\www\ROOT</base.web.dir>
+            <base.web.dir>C:\Workspace\Source\html</base.web.dir>
             <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
             <advisor.upload.localdir>${base.advisor.dir}/upload/</advisor.upload.localdir>
             <advisor.download.localdir>${base.advisor.dir}/download/</advisor.download.localdir>
-            <ftp.localdir>${base.data.dir}/ftp/</ftp.localdir>
-            <rsba.localdir>${base.rbsa.dir}/RBSA/</rsba.localdir>
-            <report.localdir>${base.data.dir}/rpt/</report.localdir>
-            <pdf.localdir>${base.data.dir}/pdf/</pdf.localdir>
-            <doc.localdir>${base.data.dir}/doc/</doc.localdir>
-            <web_reports_dir>${base.web.dir}/static/reports/</web_reports_dir>
-            <email_templates_dir>${base.web.dir}/template/html/</email_templates_dir>
+            <ftp.localdir>${base.data.dir}\ftp\</ftp.localdir>
+            <rsba.localdir>${base.rbsa.dir}\RBSA\</rsba.localdir>
+            <report.localdir>${base.data.dir}\rpt\</report.localdir>
+            <pdf.localdir>${base.data.dir}\pdf\</pdf.localdir>
+            <doc.localdir>${base.data.dir}\doc\</doc.localdir>
+            <web_reports_dir>${base.web.dir}\static\reports\</web_reports_dir>
+            <email_templates_dir>${base.web.dir}\template\html\</email_templates_dir>
          </properties>
       </profile>
       <profile>
@@ -881,15 +881,15 @@
             <apache.url>http://demo2.invessence.com:8080</apache.url>
             <tomcat.url>http://demo2.invessence.com:8080</tomcat.url>
             <ssl.url>http://demo2.invessence.com:8080</ssl.url>
-            <mail.host>smtp.gmail.com</mail.host>
-            <mail.username>no-reply@invessence.com</mail.username>
+            <mail.host>smtp.mailgun.org</mail.host>
+            <mail.username>noreply@symbil.com</mail.username>
             <mail.password>G3n3r@l89</mail.password>
             <mail.port>587</mail.port>
             <base.data.dir>/inv/data</base.data.dir>
             <base.rbsa.dir>/inv/data</base.rbsa.dir>
             <base.clientdata.dir>/inv/data/client</base.clientdata.dir>
             <base.advisor.dir>/inv/data/advisor</base.advisor.dir>
-            <base.web.dir>/inv/web/tomcat/invessence/ROOT</base.web.dir>
+            <base.web.dir>/inv/www/demo/symbil/ROOT</base.web.dir>
             <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
             <advisor.upload.localdir>${base.advisor.dir}/upload/</advisor.upload.localdir>
             <advisor.download.localdir>${base.advisor.dir}/download/</advisor.download.localdir>
@@ -915,15 +915,15 @@
             <apache.url>http://symbil.com</apache.url>
             <tomcat.url>http://symbil.com</tomcat.url>
             <ssl.url>https://symbil.com</ssl.url>
-            <mail.host>smtp.gmail.com</mail.host>
-            <mail.username>no-reply@invessence.com</mail.username>
+            <mail.host>smtp.mailgun.org</mail.host>
+            <mail.username>noreply@symbil.com</mail.username>
             <mail.password>G3n3r@l89</mail.password>
             <mail.port>587</mail.port>
             <base.data.dir>/inv/data</base.data.dir>
             <base.rbsa.dir>/inv/data</base.rbsa.dir>
             <base.clientdata.dir>/inv/data/client</base.clientdata.dir>
             <base.advisor.dir>/inv/data/advisor</base.advisor.dir>
-            <base.web.dir>/inv/web/tomcat/invessence/ROOT</base.web.dir>
+            <base.web.dir>/inv/www/symbil/ROOT</base.web.dir>
             <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
             <advisor.upload.localdir>${base.advisor.dir}/upload/</advisor.upload.localdir>
             <advisor.download.localdir>${base.advisor.dir}/download/</advisor.download.localdir>
