--- a/ltam/modules/broker-services/pom.xml
+++ b/ltam/modules/broker-services/pom.xml
@@ -19,7 +19,12 @@
 		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
 	</properties>
 	<dependencies>
-
+		 <dependency>
+		 	<groupId>com.invessence</groupId>
+		 	<artifactId>emailer</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		 </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
