--- a/ltam/modules/broker-services/pom.xml
+++ b/ltam/modules/broker-services/pom.xml
@@ -74,6 +74,14 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+
+		<!-- Bouncycastle API -->
+		<dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpg-jdk15on</artifactId>
+            <version>1.51</version>
+        </dependency>
+
 	</dependencies>
 <!--<build>-->
         <!--<defaultGoal>install</defaultGoal>-->
