--- a/ltam/modules/broker-services/pom.xml
+++ b/ltam/modules/broker-services/pom.xml
@@ -26,6 +26,12 @@
 			<scope>compile</scope>
 		 </dependency>
 		<dependency>
+		 	<groupId>com.invessence</groupId>
+		 	<artifactId>core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		 </dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${org.springframework-version}</version>
