--- a/invessence/modules/price-processor/pom.xml
+++ b/invessence/modules/price-processor/pom.xml
@@ -28,6 +28,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<!--Simple json-->
+		<dependency>
+	    <groupId>com.googlecode.json-simple</groupId>
+	     <artifactId>json-simple</artifactId>
+	     <version>1.1.1</version>
+         </dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -60,6 +67,15 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
+
+<!--
+		<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20160212</version>
+    </dependency>
+-->
+
 
 	</dependencies>
 	<build>
