--- a/invessence/modules/price-processor/pom.xml
+++ b/invessence/modules/price-processor/pom.xml
@@ -20,7 +20,15 @@
 	<groupId>com.invessence</groupId>
 	<artifactId>rbsa-preprocessor</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<scope>compile</scope>
 </dependency>
+		<dependency>
+	<groupId>com.invessence</groupId>
+	<artifactId>core</artifactId>
+	<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -67,14 +75,17 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
+		<dependency><groupId>com.invessence</groupId>
+			<artifactId>emailer</artifactId>
+			<version>1.0-SNAPSHOT</version></dependency>
 
-<!--
-		<dependency>
-	<groupId>org.json</groupId>
-	<artifactId>json</artifactId>
-	<version>20160212</version>
-    </dependency>
--->
+		<!--
+                <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160212</version>
+            </dependency>
+        -->
 
 
 	</dependencies>
